force-app/main/default/objects/CRM_Referral__c/CRM_Referral__c.object-meta.xml
<CustomObject>
    <label>CRM Referral</label>
    <nameField>
        <label>CRM Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRM Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>