force-app/main/default/objects/CRM_Referral__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CRM Referrals</relationshipLabel>
    <relationshipName>CRM_Referrals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>