force-app/main/default/objects/CRM_Referral__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Source</label>
    <referenceTo>Referral_Source__c</referenceTo>
    <relationshipLabel>CRM Referrals</relationshipLabel>
    <relationshipName>CRM_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>